add table of contents and various other stuff

--- a/src/app/docs/authority/api-routes/page.mdx
+++ b/src/app/docs/authority/api-routes/page.mdx
@@ -1,1006 +1,1 @@
-# Authority API Spec
-
-| Method                                                                | HTTP request                                                             |
-| --------------------------------------------------------------------- | ------------------------------------------------------------------------ |
-| [**Create Access Token**](authority-api.mdx#token)                    | **POST** /token                                                          |
-| [**Delete Claim**](authority-api.mdx#deleteClaim)                     | **DELETE** /acr/username_password/admin/claim/`{claimName}`/delete       |
-| [**Delete Group**](authority-api.mdx#deleteGroup)                     | **DELETE** /acr/username_password/admin/group/`{groupName}`/delete       |
-| [**Delete Scope**](authority-api.mdx#deleteScope)                     | **DELETE** /acr/username_password/admin/scope/`{scopeName}`/delete       |
-| [**Delete User**](authority-api.mdx#deleteUser)                       | **DELETE** /acr/username_password/admin/user/`{username}`/delete         |
-| [**Update Claim**](authority-api.mdx#updateClaim)                     | **PATCH** /acr/username_password/admin/claim/`{claimName}`/update        |
-| [**Add Scope to Group**](authority-api.mdx#addScopeToGroup)           | **PATCH** /acr/username_password/admin/group/`{groupName}`/add/scope     |
-| [**Add User to Group**](authority-api.mdx#addUserToGroup)             | **PATCH** /acr/username_password/admin/group/`{groupName}`/add/user      |
-| [**Remove Scope from Group**](authority-api.mdx#removeScopeFromGroup) | **PATCH** /acr/username_password/admin/group/`{groupName}`/remove/scope  |
-| [**Remove User To Group**](authority-api.mdx#removeUserFromGroup)     | **PATCH** /acr/username_password/admin/group/`{groupName}`/remove/user   |
-| [**Update Group**](authority-api.mdx#updateGroup)                     | **PATCH** /acr/username_password/admin/group/`{groupName}`/update        |
-| [**Add Claim to Scope**](authority-api.mdx#addClaimToScope)           | **PATCH** /acr/username_password/admin/scope/`{scopeName}`/add/claim     |
-| [**Remove Claim from Scope**](authority-api.mdx#removeClaimFromScope) | **PATCH** /acr/username_password/admin/scope/`{scopeName}`/remove/claim  |
-| [**Update Scope**](authority-api.mdx#updateScope)                     | **PATCH** /acr/username_password/admin/scope/`{scopeName}`/update        |
-| [**Add Group to User**](authority-api.mdx#addGroupToUser)             | **PATCH** /acr/username_password/admin/user/`{username}`/add/group       |
-| [**Add Scope to User**](authority-api.mdx#addScopeToUser)             | **PATCH** /acr/username_password/admin/user/`{username}`/add/scope       |
-| [**Restore User**](authority-api.mdx#restoreUser)                     | **PATCH** /acr/username_password/admin/user/`{username}`/archive/restore |
-| [**Remove Group from User**](authority-api.mdx#removeGroupFromUser)   | **PATCH** /acr/username_password/admin/user/`{username}`/remove/group    |
-| [**Remove Group from User**](authority-api.mdx#removeGroupFromUser)   | **PATCH** /acr/username_password/admin/user/`{username}`/remove/group    |
-| [**Remove Scope from User**](authority-api.mdx#removeScopeFromUser)   | **PATCH** /acr/username_password/admin/user/`{username}`/remove/scope    |
-| [**Remove Scope from User**](authority-api.mdx#removeScopeFromUser)   | **PATCH** /acr/username_password/admin/user/`{username}`/remove/scope    |
-| [**Update User**](authority-api.mdx#updateUser)                       | **PATCH** /acr/username_password/admin/user/`{username}`/update          |
-| [**Update Claim of User**](authority-api.mdx#updateClaimOfUser)       | **PATCH** /acr/username_password/admin/user/`{username}`/update/claim    |
-| [**Create Claim**](authority-api.mdx#createClaim)                     | **POST** /acr/username_password/admin/claim/create                       |
-| [**Create Group**](authority-api.mdx#createGroup)                     | **POST** /acr/username_password/admin/group/create                       |
-| [**Create Scope**](authority-api.mdx#createScope)                     | **POST** /acr/username_password/admin/scope/create                       |
-| [**Create User**](authority-api.mdx#createUser)                       | **POST** /acr/username_password/admin/user/create                        |
-| [**Create User from Email**](authority-api.mdx#createUserFromEmail)   | **POST** /acr/username_password/admin/user/email/create                  |
-
-<a name="token"></a>
-
-## Create Access Token
-
-Creates a new access token.
-
-### Route
-
-**POST:** /token
-
-### Request Body
-
-| Field         | Type   | Required | Description                             | Example            |
-| ------------- | ------ | -------- | --------------------------------------- | ------------------ |
-| grant_type    | string | true     | The type of grant for the access token. | client_credentials |
-| client_id     | string | true     | The client ID for authentication.       | TestAuth           |
-| client_secret | string | true     | The client secret for authentication.   | TestAuthSecret     |
-| scope         | string | true     | The scope of the access token.          | upe_admin          |
-
-### Responses
-
-| Status Code | Description                                         | Type   |
-| ----------- | --------------------------------------------------- | ------ |
-| 200         | Returns an object with the new access token inside. | object |
-
-### Authorization
-
-No authorization required.
-
-### HTTP request headers
-
-- **Content-Type**: application/x-www-form-urlencoded
-- **Accept**: application/json
-
-<a name="createClaim"></a>
-
-## **Create Claim**
-
-Creates a new claim.
-
-### Route
-
-**POST:** /acr/username_password/admin/claim/create
-
-### Request Body
-
-| Field       | Type   | Required | Description                                                                | Example               |
-| ----------- | ------ | -------- | -------------------------------------------------------------------------- | --------------------- |
-| name        | string | true     | The name of the new claim.                                                 | TestClaim             |
-| type        | string | true     | The type of the new claim. (Possible values: string, boolean, int, object) | string                |
-| description | string |          | The description for the new claim.                                         | This is a test claim. |
-
-### Responses
-
-| Status Code | Description                                     | Content Type     |
-| ----------- | ----------------------------------------------- | ---------------- |
-| 200         | Returns the newly created claim, if successful. | application/json |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="updateClaim"></a>
-
-## **Update Claim**
-
-Updates claim name and description.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/claim/`{claimName}`/update
-
-### Parameters
-
-| Name          | Type       | Description                    | Notes             |
-| ------------- | ---------- | ------------------------------ | ----------------- |
-| **claimName** | **string** | The current name of the claim. | [default to null] |
-
-### Request Body
-
-| Field       | Type   | Required | Description                       | Example                        |
-| ----------- | ------ | -------- | --------------------------------- | ------------------------------ |
-| name        | string |          | Updated name of the claim.        | UpdatedTestClaim               |
-| description | string |          | Updated description of the claim. | This is an updated test claim! |
-
-### Responses
-
-| Status Code | Description                               | Content Type     |
-| ----------- | ----------------------------------------- | ---------------- |
-| 200         | Returns the updated claim, if successful. | application/json |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="deleteClaim"></a>
-
-## **Delete Claim**
-
-Deletes a claim.
-
-### Route
-
-**DELETE:** /acr/username_password/admin/claim/`{claimName}`/delete
-
-### Parameters
-
-| Name          | Type       | Description            | Notes             |
-| ------------- | ---------- | ---------------------- | ----------------- |
-| **claimName** | **string** | The name of the claim. | [default to null] |
-
-### Responses
-
-| Status Code | Description                               | Content Type     |
-| ----------- | ----------------------------------------- | ---------------- |
-| 200         | Returns the deleted claim, if successful. | application/json |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="createScope"></a>
-
-## **Create Scope**
-
-Creates a new scope.
-
-### Route
-
-**POST:** /acr/username_password/admin/scope/create
-
-### Request Body
-
-| Field       | Type     | Required | Description                                     | Example                        |
-| ----------- | -------- | -------- | ----------------------------------------------- | ------------------------------ |
-| name        | string   | true     | The name of the new scope.                      | TestScope                      |
-| claimNames  | string[] |          | The claims with which the new scope is created. | ["name", "company", "website"] |
-| description | string   |          | The description of the new scope.               | This is a test scope!          |
-
-### Responses
-
-| Status Code | Description                                                             | Type   |
-| ----------- | ----------------------------------------------------------------------- | ------ |
-| 200         | Returns the newly created scope, if the scope was successfully created. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="updateScope"></a>
-
-## **Update Scope**
-
-Updates scope name, description or overwrites the claims from a scope.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/scope/`{scopeName}`/update
-
-### Parameters
-
-| Name          | Type       | Description                    | Notes             |
-| ------------- | ---------- | ------------------------------ | ----------------- |
-| **scopeName** | **string** | The current name of the scope. | [default to null] |
-
-### Request Body
-
-| Field       | Type     | Required | Description                                                               | Example                        |
-| ----------- | -------- | -------- | ------------------------------------------------------------------------- | ------------------------------ |
-| name        | string   |          | Updated name of the scope.                                                | UpdatedTestScope               |
-| description | string   |          | Updated description of the scope.                                         | This is an updated test scope! |
-| claimNames  | string[] |          | New claims for the scope. Old claims will be exchanged with the new ones. | ["zoneinfo", "nickname"]       |
-
-### Responses
-
-| Status Code | Description                               | Content Type     |
-| ----------- | ----------------------------------------- | ---------------- |
-| 200         | Returns the updated scope, if successful. | application/json |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="addClaimToScope"></a>
-
-## **Add Claim to Scope**
-
-Adds a claim to a scope.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/scope/`{scopeName}`/add/claim
-
-### Parameters
-
-| Name          | Type       | Description            | Notes             |
-| ------------- | ---------- | ---------------------- | ----------------- |
-| **scopeName** | **string** | The name of the scope. | [default to null] |
-
-### Request Body
-
-| Field     | Type   | Required | Description               | Example |
-| --------- | ------ | -------- | ------------------------- | ------- |
-| claimName | string | true     | Name of the claim to add. | picture |
-
-### Responses
-
-| Status Code | Description                                             | Type   |
-| ----------- | ------------------------------------------------------- | ------ |
-| 200         | Returns the scope, if the claim was successfully added. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="removeClaimFromScope"></a>
-
-## **Remove Claim from Scope**
-
-Removes a claim from a scope.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/scope/`{scopeName}`/remove/claim
-
-### Parameters
-
-| Name          | Type       | Description            | Notes             |
-| ------------- | ---------- | ---------------------- | ----------------- |
-| **scopeName** | **string** | The name of the scope. | [default to null] |
-
-### Request Body
-
-| Field     | Type   | Required | Description                                 | Example |
-| --------- | ------ | -------- | ------------------------------------------- | ------- |
-| claimName | string | true     | Name of the claim to remove from the scope. | picture |
-
-### Responses
-
-| Status Code | Description                                               | Type   |
-| ----------- | --------------------------------------------------------- | ------ |
-| 200         | Returns the scope, if the claim was successfully removed. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="deleteScope"></a>
-
-## **Delete Scope**
-
-Deletes a scope.
-
-### Route
-
-**DELETE:** /acr/username_password/admin/scope/`{scopeName}`/delete
-
-### Parameters
-
-| Name          | Type       | Description            | Notes             |
-| ------------- | ---------- | ---------------------- | ----------------- |
-| **scopeName** | **string** | The name of the scope. | [default to null] |
-
-### Responses
-
-| Status Code | Description                                                       | Type   |
-| ----------- | ----------------------------------------------------------------- | ------ |
-| 200         | Returns the deleted scope, if the scope was successfully deleted. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: Not Defined
-- **Accept**: application/json
-
-<a name="createUser"></a>
-
-## **Create User**
-
-Creates a new user.
-
-### Route
-
-**POST:** /acr/username_password/admin/user/create
-
-### Request Body
-
-| Name            | Type     | Description                       | Required | Example                                                     |
-| --------------- | -------- | --------------------------------- | -------- | ----------------------------------------------------------- |
-| **name**        | string   | The updated name of the group.    | true     | "TestUser"                                                  |
-| **password**    | string   | The password for the new user.    | true     | "Password123"                                               |
-| **groupIds**    | string[] | Ids of groups assigned to user    |          | ["87d086d8-2314-4506-b332-de622ceb11cd"]                    |
-| **scopeIds**    | string[] | Ids of scopes assigned to user    |          | ["87d086d8-2314-4506-b332-de622ceb11cd"]                    |
-| **claimValues** | object   | Values of Claims assigned to User |          | `{ "email": "TestUser@test-email.com", "upe_admin": true }` |
-
-### Responses
-
-| Status Code | Description                                 | Type   |
-| ----------- | ------------------------------------------- | ------ |
-| 200         | Returns an object with the new user inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="createUserFromEmail"></a>
-
-## **Create User from Email**
-
-Creates a new user with his e-mail instead of an username.
-
-### Route
-
-**POST:** /acr/username_password/admin/user/email/create/
-
-### Request Body
-
-| Name           | Type   | Description                                    | Required | Example               |
-| -------------- | ------ | ---------------------------------------------- | -------- | --------------------- |
-| **email**      | string | Email of the new user. (It's used as Username) | true     | "Test.User@5Minds.de" |
-| **password**   | string | Password for the new user.                     | true     | "Password123"         |
-| **givenName**  | string | Given name or first name of the user.          |          | "John"                |
-| **familyName** | string | Surname or last name of the user.              |          | "Doe"                 |
-| **company**    | string | The company of the user.                       |          | "5Minds"              |
-
-### Responses
-
-| Status Code | Description                                 | Type   |
-| ----------- | ------------------------------------------- | ------ |
-| 200         | Returns an object with the new user inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="updateUser"></a>
-
-## **Update User**
-
-Update username and password from a user.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/user/`{username}`/update
-
-### Parameters
-
-| Name         | Type       | Description                   | Notes             |
-| ------------ | ---------- | ----------------------------- | ----------------- |
-| **username** | **string** | The current name of the user. | [default to null] |
-
-### Request Body
-
-| Field    | Type   | Required | Description                    | Example            |
-| -------- | ------ | -------- | ------------------------------ | ------------------ |
-| name     | string | true     | Updated name of the user.      | UpdatedTestUser    |
-| password | string |          | Updated password for the user. | UpdatedPassword123 |
-
-### Responses
-
-| Status Code | Description                                     | Type   |
-| ----------- | ----------------------------------------------- | ------ |
-| 200         | Returns an object with the updated user inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="updateClaimOfUser"></a>
-
-## **Update Claim of User**
-
-Updates a claim from a user.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/user/`{username}`/update/claim
-
-### Parameters
-
-| Name         | Type       | Description           | Notes             |
-| ------------ | ---------- | --------------------- | ----------------- |
-| **username** | **string** | The name of the user. | [default to null] |
-
-### Request Body
-
-| Field      | Type   | Required | Description         | Example      |
-| ---------- | ------ | -------- | ------------------- | ------------ |
-| claimName  | string | true     | Name of the claim.  | phone_number |
-| claimValue | any    |          | Value of the claim. | 012517       |
-
-### Responses
-
-| Status Code | Description                               | Content Type     |
-| ----------- | ----------------------------------------- | ---------------- |
-| 200         | Returns the updated claim, if successful. | application/json |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="addGroupToUser"></a>
-
-## **Add Group to User**
-
-Adds a group to a user.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/user/`{username}`/add/group
-
-### Parameters
-
-| Name         | Type       | Description           | Notes             |
-| ------------ | ---------- | --------------------- | ----------------- |
-| **username** | **string** | The name of the user. | [default to null] |
-
-### Request Body
-
-| Name          | Type   | Description        | Required | Example     |
-| ------------- | ------ | ------------------ | -------- | ----------- |
-| **groupName** | string | Name of the group. | true     | "TestGroup" |
-
-### Responses
-
-| Status Code | Description                                     | Type   |
-| ----------- | ----------------------------------------------- | ------ |
-| 200         | Returns an object with the updated user inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="addScopeToUser"></a>
-
-## **Add Scope to User**
-
-Adds a scope to a user.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/user/`{username}`/add/scope
-
-### Parameters
-
-| Name         | Type       | Description           | Notes             |
-| ------------ | ---------- | --------------------- | ----------------- |
-| **username** | **string** | The name of the user. | [default to null] |
-
-### Request Body
-
-| Name          | Type   | Description        | Example |
-| ------------- | ------ | ------------------ | ------- |
-| **scopeName** | string | Name of the scope. | "phone" |
-
-### Responses
-
-| Status Code | Description                                | Type   |
-| ----------- | ------------------------------------------ | ------ |
-| 200         | Returns an object with the updated inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="removeGroupFromUser"></a>
-
-## **Remove Group from User**
-
-Removes a group from a user.
-
-### Route
-
-**DELETE:** /acr/username_password/admin/user/`{username}`/remove/group
-
-### Parameters
-
-| Name         | Type       | Description           | Notes             |
-| ------------ | ---------- | --------------------- | ----------------- |
-| **username** | **string** | The name of the user. | [default to null] |
-
-### Request Body
-
-| Field     | Type   | Required | Description        | Example   |
-| --------- | ------ | -------- | ------------------ | --------- |
-| groupName | string | true     | Name of the group. | TestGroup |
-
-### Responses
-
-| Status Code | Description                                     | Type   |
-| ----------- | ----------------------------------------------- | ------ |
-| 200         | Returns an object with the updated user inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="removeScopeFromUser"></a>
-
-## **Remove Scope from User**
-
-Removes a scope from a user.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/user/`{username}`/remove/scope
-
-### Parameters
-
-| Name         | Type       | Description           | Notes             |
-| ------------ | ---------- | --------------------- | ----------------- |
-| **username** | **string** | The name of the user. | [default to null] |
-
-### Request Body
-
-| Field     | Type   | Required | Description        | Example |
-| --------- | ------ | -------- | ------------------ | ------- |
-| scopeName | string | true     | Name of the scope. | phone   |
-
-### Responses
-
-| Status Code | Description                                     | Type   |
-| ----------- | ----------------------------------------------- | ------ |
-| 200         | Returns an object with the updated user inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="deleteUser"></a>
-
-## **Delete User**
-
-Delete or archive a user.
-
-### Route
-
-**DELETE:** /acr/username_password/admin/user/`{username}`/delete
-
-### Parameters
-
-| Name         | Type       | Description           | Notes             |
-| ------------ | ---------- | --------------------- | ----------------- |
-| **username** | **string** | The name of the user. | [default to null] |
-
-### Request Body
-
-| Field       | Type    | Required | Description                                              | Example |
-| ----------- | ------- | -------- | -------------------------------------------------------- | ------- |
-| archiveUser | boolean |          | When true, the user will be archived instead of deleted. | false   |
-
-### Responses
-
-| Status Code | Description                                     | Type   |
-| ----------- | ----------------------------------------------- | ------ |
-| 200         | Returns an object with the deleted user inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="restoreUser"></a>
-
-## **Restore User**
-
-Restore a user.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/user/`{username}`/archive/restore
-
-### Parameters
-
-| Name         | Type       | Description           | Notes |
-| ------------ | ---------- | --------------------- | ----- |
-| **username** | **string** | The name of the user. |       |
-
-### Responses
-
-| Status Code | Description                                      | Type   |
-| ----------- | ------------------------------------------------ | ------ |
-| 200         | Returns an object with the restored user inside. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: Not defined
-- **Accept**: application/json
-
-<a name="createGroup"></a>
-
-## **Create Group**
-
-Creates a new group.
-
-### Route
-
-**POST:** /acr/username_password/admin/group/create
-
-### Request Body
-
-| Field       | Type   | Required | Description                        | Example               |
-| ----------- | ------ | -------- | ---------------------------------- | --------------------- |
-| name        | string | true     | The name of the new group.         | TestGroup             |
-| description | string |          | The description for the new group. | This is a test group. |
-
-### Responses
-
-| Status Code | Description                                     | Type   |
-| ----------- | ----------------------------------------------- | ------ |
-| 200         | Returns the newly created group, if successful. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="updateGroup"></a>
-
-## **Update Group**
-
-Updates the name or description of a group.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/group/`{groupName}`/update
-
-### Parameters
-
-| Name          | Type       | Description                    | Notes             |
-| ------------- | ---------- | ------------------------------ | ----------------- |
-| **groupName** | **string** | The current name of the group. | [default to null] |
-
-### Request Body
-
-| Field       | Type   | Required | Description                            | Example                        |
-| ----------- | ------ | -------- | -------------------------------------- | ------------------------------ |
-| name        | string |          | The updated name of the group.         | TestUpdatedGroup               |
-| description | string |          | The description for the updated group. | This is an updated test group. |
-
-### Responses
-
-| Status Code | Description                                              | Type   |
-| ----------- | -------------------------------------------------------- | ------ |
-| 200         | Returns the updated group, if the update was successful. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="addScopeToGroup"></a>
-
-## **Add Scope to Group**
-
-Adds a scope to a group.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/group/`{groupName}`/add/scope
-
-### Parameters
-
-| Name          | Type       | Description                    | Notes             |
-| ------------- | ---------- | ------------------------------ | ----------------- |
-| **groupName** | **string** | The current name of the group. | [default to null] |
-
-### Request Body
-
-| Field     | Type   | Required | Description            | Example |
-| --------- | ------ | -------- | ---------------------- | ------- |
-| scopeName | string | true     | The name of the scope. | openid  |
-
-### Responses
-
-| Status Code | Description                                       | Type   |
-| ----------- | ------------------------------------------------- | ------ |
-| 200         | Returns all claims from the group, if successful. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="addUserToGroup"></a>
-
-## **Add User to Group**
-
-Adds a user to a group.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/group/`{groupName}`/add/user
-
-### Parameters
-
-| Name          | Type       | Description            | Notes             |
-| ------------- | ---------- | ---------------------- | ----------------- |
-| **groupName** | **string** | The name of the group. | [default to null] |
-
-### Request Body
-
-| Field    | Type   | Required | Description           | Example  |
-| -------- | ------ | -------- | --------------------- | -------- |
-| username | string | true     | The name of the user. | TestUser |
-
-### Responses
-
-| Status Code | Description                                                                      | Type   |
-| ----------- | -------------------------------------------------------------------------------- | ------ |
-| 200         | Returns the group with all associated users, if the user was successfully added. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="removeScopeFromGroup"></a>
-
-## **Remove Scope from Group**
-
-Removes a scope from a group.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/group/`{groupName}`/remove/scope
-
-### Parameters
-
-| Name          | Type       | Description                    | Notes             |
-| ------------- | ---------- | ------------------------------ | ----------------- |
-| **groupName** | **string** | The current name of the group. | [default to null] |
-
-### Request Body
-
-| Field     | Type   | Required | Description                      | Example |
-| --------- | ------ | -------- | -------------------------------- | ------- |
-| scopeName | string | true     | The name of the scope to remove. | openid  |
-
-### Responses
-
-| Status Code | Description                                                               | Type   |
-| ----------- | ------------------------------------------------------------------------- | ------ |
-| 200         | Returns all claims from the group, if the scope was successfully removed. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="removeUserFromGroup"></a>
-
-## **Remove User from Group**
-
-Removes a user from a group.
-
-### Route
-
-**PATCH:** /acr/username_password/admin/group/`{groupName}`/remove/user
-
-### Parameters
-
-| Name          | Type       | Description            | Notes             |
-| ------------- | ---------- | ---------------------- | ----------------- |
-| **groupName** | **string** | The name of the group. | [default to null] |
-
-### Request Body
-
-| Field    | Type   | Required | Description                                    | Example  |
-| -------- | ------ | -------- | ---------------------------------------------- | -------- |
-| username | string | true     | The name of the user to remove from the group. | TestUser |
-
-### Responses
-
-| Status Code | Description                                                                        | Type   |
-| ----------- | ---------------------------------------------------------------------------------- | ------ |
-| 200         | Returns the group with all associated users, if the user was successfully removed. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: application/json
-- **Accept**: application/json
-
-<a name="deleteGroup"></a>
-
-## **Delete Group**
-
-Deletes a group.
-
-### Route
-
-**DELETE:** /acr/username_password/admin/group/`{groupName}`/delete
-
-### Parameters
-
-| Name          | Type       | Description                    | Notes             |
-| ------------- | ---------- | ------------------------------ | ----------------- |
-| **groupName** | **string** | The current name of the group. | [default to null] |
-
-### Responses
-
-| Status Code | Description                                            | Type   |
-| ----------- | ------------------------------------------------------ | ------ |
-| 200         | Returns the deleted group, if deletion was successful. | object |
-
-### Authorization
-
-Auth Header: 'Bearer `{AccessToken}`'
-
-Access Token needs to have the claim 'upe_admin'.
-
-### HTTP request headers
-
-- **Content-Type**: Not Defined
-- **Accept**: application/json
+# Api Routes
