--- a/src/app/docs/studio/page.mdx
+++ b/src/app/docs/studio/page.mdx
@@ -1,1 +1,5 @@
 # Studio
+
+Das 5Minds-Studio ist der Ort, an dem du deine Softwareanforderungen einfach managen kannst. Mittels präziser Geschäftsprozessmodellierung,
+welche auf dem weltweiten ISO-Standard BPMN 2.0 basiert, kannst du komplexe Prozesse grafisch darstellen und diese im Hintergrund mit der 5Minds Workflow-Engine ausführen.
+Durch die transparente Darstellung aller Prozesse kannst du ganz einfach Optimierungspotential erkennen und Abläufe verbessern.
