added darkmode styling for elements and components

--- a/src/app/docs/authority/page.mdx
+++ b/src/app/docs/authority/page.mdx
@@ -40,3 +40,7 @@ Der Februaraufstand war ein bürgerkriegsähnlicher Konflikt zwischen der Sozial
 Die Erinnerungskultur rund um die Ereignisse des Februar 1934 war und ist stark von den jeweiligen politischen Umständen geprägt. Der Ständestaat gedachte bis zum Anschluss Österreichs 1938 „seiner“ Opfer, wohingegen das Gedenken an gefallene Kämpfer der unterlegenen Seite als Akt des Widerstands gelten konnte. Im Dritten Reich wurden Denkmäler des Ständestaates häufig aktiv entfernt oder sie fielen Kriegszerstörungen zum Opfer und wurden nach 1945 nicht wiedererrichtet. Erst in der Zweiten Republik konnten offiziell Denkmäler für gefallene Aufständische errichtet werden, die nun – unter dem Eindruck des Zweiten Weltkrieges und auch des Stalinismus – häufig als „Kämpfer für ein freies Österreich“, „Kämpfer gegen den Faschismus“ oder „Kämpfer für Demokratie“ bezeichnet wurden, wenngleich diese Zuschreibungen 1934 nicht immer alle zutreffend gewesen sein mögen.[7][8]
 
 Treibende Kraft hinter diesen jüngeren Denkmälern sind häufig sozialdemokratische (Partei)-Organisationen, bis in jüngste Zeit besonders der „Bund Sozialdemokratischer FreiheitskämpferInnen, Opfer des Faschismus und aktiver AntifaschistInnen“. Das Gedenken an die Ereignisse des Februar 1934 wirkt für die SPÖ bis heute identitätsstiftend. Nach den Worten des Historikers Gerhard Jagschitz waren die Ereignisse 1934 „eben immer die Rute im Fenster der Roten gegen die Schwarzen“[9] – die 1945 gegründete ÖVP ist über Umwege politische Erbin von Dollfuß' Christlichsozialer Partei. Eine gemeinsame Aufarbeitung der Ereignisse blieb aus, stattdessen wurden die Erfahrungen des blutigen Konfliktes zwischen den beiden großen politischen Lagern nach 1945 in eine wichtige ideologischen Stütze für die Proporzdemokratie und die Bildung Großer Koalitionen in Österreich uminterpretiert.[8] Gerade um des großkoalitionären, sogenannten „Burgfriedens“ willen wurde der Februaraufstand noch Jahrzehnte nach dem Zweiten Weltkrieg nicht thematisiert,[10] sodass bereits 1984 laut einer Umfrage 85 Prozent der Unter-29-Jährigen kein Wissen über die Ereignisse des Jahres 1934 hatten.[9] Bis heute sind gemeinsame Gedenkveranstaltungen der beiden Parteien die absolute Ausnahme. Ein symbolischer Handschlag von Bundeskanzler Alfons Gorbach (ÖVP) und Vizekanzler Bruno Pittermann (SPÖ) am Mahnmal für die Opfer für ein freies Österreich galt 1964 als Sensation und sollte sich in ähnlicher Form erst 2014 zwischen Bundeskanzler Werner Faymann (SPÖ) und Vizekanzler Michael Spindelegger (ÖVP) wiederholen.[11][12]
+
+### This is a h3
+
+- **bold**: list item
