--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -8,3 +8,17 @@ This is the first lines of **MDX** written in my own Nextjs project.
 `processcube`
 
 <SomeShit />
+
+- list item
+- another one
+
+**bold text**
+
+_italic text_
+
+| Name    | Age | Description       |
+| ------- | --- | ----------------- |
+| **Jim** | 19  | Entwickler        |
+| **Tom** | 37  | Senior Entwickler |
+
+### h3
